2007-10-04  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/:  Split argument setup into more methods to
	make overriding in subclasses easier.

2007-10-03  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/options.py (KSOptionParser.__init__):  If an option
	parser object has the same option added twice, allow the later one to
	override the former one.

	* pykickstart/parser.py (KickstartParser.handlePackageHdr):
	Undeprecate --excludedocs.

	* pykickstart/commands/device.py (F8_Device.parse):  Fix a traceback
	caused by reading off the end of an array.

	* pykickstart/commands/bootloader.py:  Split argument setup into more
	methods to make overriding in subclasses easier (katzj).
	(F8_Bootloader):  Added (katzj).

	* pykickstart/handlers/control.py:  Use F8_Bootloader for Fedora 8
	(katzj).

2007-10-02  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

2007-10-01  Chris Lumens  <clumens@redhat.com>

	* po/sr@latin.po:  Renamed from sr@Latn.po (#259121).

	* pykickstart/commands/device.py (F8_Device):  Add a new version of
	the device command that does not take a type argument.
	(F8_DeviceData):  Multiple device commands can be specified in a
	single kickstart file.
	* pykickstart/handlers/control.py:  Use F8_Device for Fedora 8.
	Add F8_DeviceData for Fedora 8.

2007-09-28  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py:  New version.

	* pykickstart/parser.py (Packages.__str__):  Fix output formatting for
	package section header (#310211).

	* tools/ksflatten:  Add a script to flatten out a kickstart file
	containing %includes into one kickstart file (katzj AT redhat DOT
	com).

2007-09-12  Chris Lumens  <clumens@redhat.com>

	* pykickstart.spec, setup.py: New version.

	* pykickstart/parser.py (Script.__str__):  Fix format string for
	output.
	(Packages.__str__):  Output %end after all the packages.
